# routes/index.js
@@ -1,12 +1,17 @@
 const routes = require('express').Router();
 const temple = require('./temple');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('../swagger.json');
 
 routes.use('/temples', temple);
+routes.use('/api-docs', swaggerUi.serve);
+routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
+
 routes.use(
   '/',
   (docData = (req, res) => {
     let docData = {
-      documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs',
+      documentationURL: 'https://localhost:8080',
     };
     res.send(docData);
   })
