# swagger.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/temples/": {
+    "/api-docs": {
       "get": {
         "description": "",
         "responses": {
@@ -23,7 +23,7 @@
     },
     "/temples/": {
       "get": {
-        "description": "API Key if needed: Ezl0961tEpx2UxTZ5v2uKFK91qdNAr5npRlMT1zLcE3Mg68XwZj3N8Dyp1R8IvFenrVwHRllOUxF0Og00l0m9NcaYMtH6Bpgdv7N",
+        "description": "",
         "parameters": [
           {
             "name": "apiKey",
